--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="relative">
         <img src="disney-2.jpeg" alt="background" class="h-fit w-screen  hover:scale-100 relative " >
-        <img src="disney-101.jpg" alt="overlay" class="animate-bounce absolute  top-40 right-62 w-60 h-50 transform rounded-2xl border-blue-600 shadow-blue-800 ">
+        <img src="disney-101.jpg" alt="overlay" class=" absolute  top-40 right-62 w-60 h-50 transform rounded-2xl border-blue-600 shadow-blue-800 ">
         <h1 class="absolute top-90 text-center right-18 font-serif p-3 w-150 h-50 transform text-white">New sailing available!<br>Set sail on a magical holiday at sea with<br>our 3 and 4-night voyages,with new sailing available through september 2026.</h1>
     </div>
     <div class="flex w-fit gap-5 pt-8 " >
